3️⃣ playerinfo table scrape

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        " </table>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "</table>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        " 44  Nov 13, 2022   T20I # 1879  ]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
        "44  Nov 13, 2022   T20I # 1879  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
        " '/ci/engine/match/1298179.html']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2012,7 @@
        " '/ci/engine/match/1298179.html']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2381,7 +2381,7 @@
        "[1568 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2426,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2807,7 +2807,7 @@
        "[813 rows x 13 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2834,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2851,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3860,7 +3860,7 @@
        " ...]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3879,7 +3879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4132,7 +4132,7 @@
        " '/player/wellington-masakadza-571703']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4148,7 +4148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4554,7 +4554,7 @@
        "[245 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4575,6 +4575,202 @@
     "    temp = pd.DataFrame(temp, index=[0])\n",
     "    player_info = pd.concat([player_info, temp], ignore_index=True)\n",
     "        \n",
+    "player_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jan Frylinck</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Left arm Fast medium</td>\n",
+       "      <td>Allrounder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michael van Lingen</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Left arm Medium</td>\n",
+       "      <td>Bowling Allrounder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Divan la Cock</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Legbreak</td>\n",
+       "      <td>Opening Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jan Nicol Loftie-Eaton</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Right arm Medium, Legbreak</td>\n",
+       "      <td>Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Stephan Baard</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Right arm Medium fast</td>\n",
+       "      <td>Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Heinrich Klaasen</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Right arm Offbreak</td>\n",
+       "      <td>Wicketkeeper Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Nasum Ahmed</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Slow Left arm Orthodox</td>\n",
+       "      <td>Bowler</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Ebadot Hossain</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Right arm Fast medium</td>\n",
+       "      <td>Bowler</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Rishabh Pant</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Wicketkeeper Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>Wellington Masakadza</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Slow Left arm Orthodox</td>\n",
+       "      <td>Bowler</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>245 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          0             1               2  \\\n",
+       "0              Jan Frylinck       Namibia   Left hand Bat   \n",
+       "1        Michael van Lingen       Namibia   Left hand Bat   \n",
+       "2             Divan la Cock       Namibia  Right hand Bat   \n",
+       "3    Jan Nicol Loftie-Eaton       Namibia   Left hand Bat   \n",
+       "4             Stephan Baard       Namibia  Right hand Bat   \n",
+       "..                      ...           ...             ...   \n",
+       "240        Heinrich Klaasen  South Africa  Right hand Bat   \n",
+       "241             Nasum Ahmed    Bangladesh   Left hand Bat   \n",
+       "242          Ebadot Hossain    Bangladesh  Right hand Bat   \n",
+       "243            Rishabh Pant         India   Left hand Bat   \n",
+       "244    Wellington Masakadza      Zimbabwe   Left hand Bat   \n",
+       "\n",
+       "                              3                    4  \n",
+       "0          Left arm Fast medium           Allrounder  \n",
+       "1               Left arm Medium   Bowling Allrounder  \n",
+       "2                      Legbreak       Opening Batter  \n",
+       "3    Right arm Medium, Legbreak               Batter  \n",
+       "4         Right arm Medium fast               Batter  \n",
+       "..                          ...                  ...  \n",
+       "240          Right arm Offbreak  Wicketkeeper Batter  \n",
+       "241      Slow Left arm Orthodox               Bowler  \n",
+       "242       Right arm Fast medium               Bowler  \n",
+       "243                        None  Wicketkeeper Batter  \n",
+       "244      Slow Left arm Orthodox               Bowler  \n",
+       "\n",
+       "[245 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_info = pd.DataFrame()\n",
+    "for url in player_urls:\n",
+    "    response = requests.get('https://www.espncricinfo.com'+ url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    name = soup.find_all('h1', class_='ds-text-title-l ds-font-bold')\n",
+    "    team = soup.find_all('span', class_='ds-text-comfortable-s')\n",
+    "    divs = soup.find_all('div', class_= 'ds-grid lg:ds-grid-cols-3 ds-grid-cols-2 ds-gap-4 ds-mb-8')\n",
+    "    dict = {}\n",
+    "    dict['name'] = name[0].text\n",
+    "    dict['team'] = team[0].text\n",
+    "    for div in divs:\n",
+    "        paras = div.find_all('p')\n",
+    "        headers = div.find_all('h5')\n",
+    "        for p, h in zip(paras, headers):\n",
+    "            dict[p.text] = h.text\n",
+    "        try:\n",
+    "            bat = dict['Batting Style']\n",
+    "        except:\n",
+    "            bat = None\n",
+    "        try:\n",
+    "            bowl = dict['Bowling Style']\n",
+    "        except:\n",
+    "            bowl = None\n",
+    "        try:\n",
+    "            role = dict['Playing Role']\n",
+    "        except:\n",
+    "            role = None\n",
+    "        temp = [[dict['name'], dict['team'], bat, bowl, role]]\n",
+    "    temp = pd.DataFrame(temp, index=[0])\n",
+    "    player_info = pd.concat([player_info, temp], ignore_index=True, axis=0)\n",
     "player_info"
    ]
   },
@@ -4604,7 +4800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
