--- a/test.ipynb
+++ b/test.ipynb
@@ -3401,7 +3401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3807,7 +3807,7 @@
        "[245 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3833,7 +3833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4015,7 +4015,7 @@
        "243                          Wicketkeeper     Wicketkeeper Batter  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4026,7 +4026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4053,6 +4053,298 @@
     "print('Bowling style -', h5[4].get_text(strip=True) if h5[4] else None)\n",
     "print('Player role -', h5[5].get_text(strip=True) if h5[5] else None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Finn Allen</td>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Top order Batter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0            1               2     3                 4\n",
+       "0  Finn Allen  New Zealand  Right hand Bat  None  Top order Batter"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "response = requests.get('https://www.espncricinfo.com/player/finn-allen-959759')\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "name = soup.find_all('h1', class_='ds-text-title-l ds-font-bold')\n",
+    "team = soup.find_all('span', class_='ds-text-comfortable-s')\n",
+    "divs = soup.find_all('div', class_= 'ds-grid lg:ds-grid-cols-3 ds-grid-cols-2 ds-gap-4 ds-mb-8')\n",
+    "dict = {}\n",
+    "dict['name'] = name[0].text\n",
+    "dict['team'] = team[0].text\n",
+    "for div in divs:\n",
+    "    paras = div.find_all('p')\n",
+    "    headers = div.find_all('h5')\n",
+    "    for p, h in zip(paras, headers):\n",
+    "        dict[p.text] = h.text\n",
+    "    try:\n",
+    "        bat = dict['Batting Style']\n",
+    "    except:\n",
+    "        bat = None\n",
+    "    try:\n",
+    "        bowl = dict['Bowling Style']\n",
+    "    except:\n",
+    "        bowl = None\n",
+    "    try:\n",
+    "        role = dict['Playing Role']\n",
+    "    except:\n",
+    "        role = None\n",
+    "    temp = [[dict['name'], dict['team'], bat, bowl, role]]\n",
+    "    df1 = pd.DataFrame(temp, index=[0])\n",
+    "    df = pd.concat([df, df1], ignore_index=True, axis=0 )\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jan Frylinck</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Left arm Fast medium</td>\n",
+       "      <td>Allrounder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michael van Lingen</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Left arm Medium</td>\n",
+       "      <td>Bowling Allrounder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Divan la Cock</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Legbreak</td>\n",
+       "      <td>Opening Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jan Nicol Loftie-Eaton</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Right arm Medium, Legbreak</td>\n",
+       "      <td>Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Stephan Baard</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Right arm Medium fast</td>\n",
+       "      <td>Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Heinrich Klaasen</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Right arm Offbreak</td>\n",
+       "      <td>Wicketkeeper Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Nasum Ahmed</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Slow Left arm Orthodox</td>\n",
+       "      <td>Bowler</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Ebadot Hossain</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Right hand Bat</td>\n",
+       "      <td>Right arm Fast medium</td>\n",
+       "      <td>Bowler</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Rishabh Pant</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Wicketkeeper Batter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>Wellington Masakadza</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>Left hand Bat</td>\n",
+       "      <td>Slow Left arm Orthodox</td>\n",
+       "      <td>Bowler</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>245 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          0             1               2  \\\n",
+       "0              Jan Frylinck       Namibia   Left hand Bat   \n",
+       "1        Michael van Lingen       Namibia   Left hand Bat   \n",
+       "2             Divan la Cock       Namibia  Right hand Bat   \n",
+       "3    Jan Nicol Loftie-Eaton       Namibia   Left hand Bat   \n",
+       "4             Stephan Baard       Namibia  Right hand Bat   \n",
+       "..                      ...           ...             ...   \n",
+       "240        Heinrich Klaasen  South Africa  Right hand Bat   \n",
+       "241             Nasum Ahmed    Bangladesh   Left hand Bat   \n",
+       "242          Ebadot Hossain    Bangladesh  Right hand Bat   \n",
+       "243            Rishabh Pant         India   Left hand Bat   \n",
+       "244    Wellington Masakadza      Zimbabwe   Left hand Bat   \n",
+       "\n",
+       "                              3                    4  \n",
+       "0          Left arm Fast medium           Allrounder  \n",
+       "1               Left arm Medium   Bowling Allrounder  \n",
+       "2                      Legbreak       Opening Batter  \n",
+       "3    Right arm Medium, Legbreak               Batter  \n",
+       "4         Right arm Medium fast               Batter  \n",
+       "..                          ...                  ...  \n",
+       "240          Right arm Offbreak  Wicketkeeper Batter  \n",
+       "241      Slow Left arm Orthodox               Bowler  \n",
+       "242       Right arm Fast medium               Bowler  \n",
+       "243                        None  Wicketkeeper Batter  \n",
+       "244      Slow Left arm Orthodox               Bowler  \n",
+       "\n",
+       "[245 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "for url in player_urls:\n",
+    "    response = requests.get('https://www.espncricinfo.com'+ url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    name = soup.find_all('h1', class_='ds-text-title-l ds-font-bold')\n",
+    "    team = soup.find_all('span', class_='ds-text-comfortable-s')\n",
+    "    divs = soup.find_all('div', class_= 'ds-grid lg:ds-grid-cols-3 ds-grid-cols-2 ds-gap-4 ds-mb-8')\n",
+    "    dict = {}\n",
+    "    dict['name'] = name[0].text\n",
+    "    dict['team'] = team[0].text\n",
+    "    for div in divs:\n",
+    "        paras = div.find_all('p')\n",
+    "        headers = div.find_all('h5')\n",
+    "        for p, h in zip(paras, headers):\n",
+    "            dict[p.text] = h.text\n",
+    "        try:\n",
+    "            bat = dict['Batting Style']\n",
+    "        except:\n",
+    "            bat = None\n",
+    "        try:\n",
+    "            bowl = dict['Bowling Style']\n",
+    "        except:\n",
+    "            bowl = None\n",
+    "        try:\n",
+    "            role = dict['Playing Role']\n",
+    "        except:\n",
+    "            role = None\n",
+    "        temp = [[dict['name'], dict['team'], bat, bowl, role]]\n",
+    "    df1 = pd.DataFrame(temp, index=[0])\n",
+    "    df = pd.concat([df, df1], ignore_index=True, axis=0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -4071,7 +4363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
